<resources>
    <string name="google_maps_key">AIzaSyATZR-lEQa9P52hd-ZU-3_pJ6ung5eSM9w</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="successful">Successful</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="time_out">Unable to connect to the server.</string>
    <string name="session_expired">Your session is expired.</string>
    <!--    Permissions    -->
    <string name="unknown_error">Unknown error.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This application requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt;.</string>
    <string name="permission_required_toast">Location permission is required for this application.</string>

    <string name="location_denied">Location Permission Denied</string>

    <string name="wrong_code">The verification code you entered is wrong or expired. Please try again or request new code.</string>
    <string name="location_request_sms">Before we start, remember that you must leave your location services on in order for this application to assist you!</string>
    <string name="location_request_title">Hold on!</string>
    <string name="resend">resend</string>
    <string name="oops">Oops!</string>
    <string name="try_again">try again</string>

    <!-- Login screen -->
    <string name="txt_hint_user_name">Username</string>
    <string name="txt_hint_pw">Password</string>
    <string name="cont">Continue</string>
    <string name="login">Login</string>
    <string name="user_name_not_valid">Username format is not valid</string>
    <string name="password_not_valid">Password is not valid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logout">Logout</string>

</resources>
