<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialog"
            type="com.example.cartrack.widget.dialog.ErrorDialog" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/bg_rounded_corner_primary"
        android:padding="@dimen/_18sdp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.Cartrack.DialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/oops"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/TextAppearance.Cartrack.Body.OnBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@{dialog.message}"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="This is message" />

        <Button
            android:id="@+id/btCancel"
            style="@style/Widget.Cartrack.Button.Secondary.Negative"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/margin_normal"
            android:onClick="@{dialog.cancelButtonClick}"
            android:paddingStart="@dimen/_9sdp"
            android:paddingEnd="@dimen/_9sdp"
            android:text="@{dialog.negativeText}"
            app:layout_constraintEnd_toStartOf="@id/btSet"
            app:layout_constraintTop_toTopOf="@+id/btSet"
            tools:text="@string/no" />

        <Button
            android:id="@+id/btSet"
            style="@style/Widget.Cartrack.Button.Accent"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/margin_large"
            android:onClick="@{v -> dialog.dismiss()}"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/try_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>